<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/login_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_app_title"
        style="@style/AppTitleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_app_version"
        style="@style/AppVersionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_title" />

    <TextView
        android:id="@+id/login_text_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_app_url"
        style="@style/AppUrlText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_version" />

</androidx.constraintlayout.widget.ConstraintLayout>