<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/distance_from_layout_to_content"
    tools:context=".activities.ComposeActivity">

    <TextView
        android:id="@+id/compose_text_from"
        android:layout_width="@dimen/width_of_labels_on_compose_screen"
        android:layout_height="wrap_content"
        android:text="@string/compose_from"
        android:labelFor="@id/compose_edittext_from"
        style="@style/ComposeLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/compose_edittext_from"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/compose_text_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/compose_to"
        android:labelFor="@id/compose_edittext_to"
        style="@style/ComposeLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/compose_edittext_to"
        app:layout_constraintEnd_toEndOf="@+id/compose_text_from"
        app:layout_constraintStart_toStartOf="@+id/compose_text_from" />

    <TextView
        android:id="@+id/compose_text_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/compose_subject"
        android:labelFor="@id/compose_edittext_subject"
        style="@style/ComposeLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/compose_edittext_subject"
        app:layout_constraintEnd_toEndOf="@+id/compose_text_to"
        app:layout_constraintStart_toStartOf="@+id/compose_text_to" />

    <EditText
        android:id="@+id/compose_edittext_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_between_controls_1x"
        android:inputType="textEmailAddress"
        android:enabled="false"
        android:importantForAutofill="no"
        style="@style/InputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/compose_text_from"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/compose_edittext_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_between_controls_1x"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        style="@style/InputEditText"
        app:layout_constraintEnd_toEndOf="@+id/compose_edittext_from"
        app:layout_constraintStart_toEndOf="@+id/compose_text_from"
        app:layout_constraintTop_toBottomOf="@+id/compose_edittext_from" />

    <EditText
        android:id="@+id/compose_edittext_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_between_controls_1x"
        android:inputType="textEmailSubject"
        android:importantForAutofill="no"
        style="@style/InputEditText"
        app:layout_constraintEnd_toEndOf="@+id/compose_edittext_to"
        app:layout_constraintStart_toEndOf="@+id/compose_text_to"
        app:layout_constraintTop_toBottomOf="@+id/compose_edittext_to" />

    <EditText
        android:id="@+id/compose_edittext_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/distance_between_controls_1x"
        android:layout_marginBottom="@dimen/distance_between_controls_1x"
        android:gravity="start|top"
        android:hint="@string/compose_content"
        android:inputType="textMultiLine|textAutoComplete|textAutoCorrect"
        android:importantForAutofill="no"
        style="@style/InputEditText"
        app:layout_constraintBottom_toTopOf="@+id/compose_button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compose_edittext_subject" />

    <Button
        android:id="@+id/compose_button_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/compose_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/compose_edittext_content"
        app:layout_constraintStart_toStartOf="@+id/compose_edittext_content" />

</androidx.constraintlayout.widget.ConstraintLayout>